fix: add overflow wrap to Comment

--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: 1rem;
 
+  overflow-wrap: anywhere;
+
   padding: 1rem;
   border: 1px solid black;
 }
